--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Speed Test Pro - Professional Network Performance Testing" />
     <meta property="og:description" content="Test your internet speed with professional-grade accuracy. Real-time charts, bufferbloat detection, and detailed performance metrics." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!--<meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />-->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
